--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
